新增访问平台

--- a/src/manifest.production.json
+++ b/src/manifest.production.json
@@ -3,8 +3,12 @@
     "name": "nav",
     "description": "一款开发人员定制的浏览器导航",
     "version": "0.0.1",
+    
     "options_page": "options.html",
     "browser_action": {
         "default_popup": "popup.html"
-    }
+    },
+    "chrome_url_overrides": {
+        "newtab": "content.html"
+      }
 }
